test/asm/uninit03.err
Error: uninit03.asm: 14: uninitialised data in non-UNINIT segment:
_bill   dw  ?
             ^
Errors: 1
